CHANGE structure of the properties include file to avoid error message

--- a/docs/de-de/modules/warenwirtschaft/pages/properties.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/properties.adoc
@@ -148,10 +148,7 @@ Zum Beispiel, die Information, dass ein Lagerort für Kühlwaren geeignet ist.
 
 Erstelle die Eigenschaften, die du zur Charakterisierung deiner Lagerorte verwenden möchtest, z.B. die Notiz "für Kühlwaren geeignet".
 
-. Öffne das Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration*.
-. Klicke auf icon:plus[role="darkGrey"] *Eigenschaft erstellen*.
-. Passe die Einstellungen an deine Bedürfnisse an.
-. Speichere (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+include::_includes:page$neue-eigenschaften-erstellen.adoc[]
 
 //#GIF#
 
@@ -160,92 +157,14 @@ Erstelle die Eigenschaften, die du zur Charakterisierung deiner Lagerorte verwen
 [#62]
 ==== Details
 
-[cols="1,4a"]
-|===
-|Einstellung |Erläuterung
-
-| *ID*
-|Sobald du die Eigenschaft erstmalig gespeichert hast, erhält sie automatisch eine fortlaufende und einzigartige ID.
-Die ID kann nicht geändert werden.
-
-| *Bereich* +
-([red]#Pflichtfeld#)
-|Wofür möchtest du die Eigenschaft nutzen?
-Wähle den entsprechenden Bereich aus der Dropdown-Liste.
-Je nachdem, welchen Bereich du hier wählst, ändern sich die weiteren Einstellungen im Menü.
-
-*_Hinweis_*: Diese Einstellung kann nach dem Speichern nicht mehr geändert werden.
-
-*_Hinweis_*: Diese Handbuchseite erklärt Eigenschaften vom Bereich *Lagerort*.
-Solche Eigenschaften werden zur Charakterisierung von deinen Lagerorten verwendet.
-Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakten] verwendet werden.
-Klicke auf die Links, um mehr über diese anderen Anwendungsfälle zu erfahren.
-
-| *Typ* +
-([red]#Pflichtfeld#)
-|Welche Art von Eigenschaft möchtest du anlegen?
-Wähle den Eigenschaftstyp aus der Dropdown-Liste.
-
-*_Hinweis_*: Diese Einstellung kann nach dem Speichern nicht mehr geändert werden.
-
-[cols="1,4a"]
-!====
-!Typ !Wofür ist der Typ geeignet?
-
-! *Kein*
-!Der Name der Eigenschaft kann angezeigt werden.
-Dies eignet sich, z.B. um Stichwörter für einen Lagerort hervorzuheben ("für Kühlwaren geeignet").
-
-! *Auswahl*
-!Eignet sich für Situationen, in denen es zwar mehrere Auswahlmöglichkeiten gibt, aber nur eine davon auf den Lagerort zutrifft.
-
-*_Anwendungsbeispiel_*: +
-Stell dir vor, du hast mehrere Kühl- und Gefrierschränke in deinem Lager.
-Die Kühlschränke werden zur Lagerung von Lebensmitteln bei 4° C verwendet.
-Die Gefrierschränke werden zur Lagerung von Lebensmitteln bei -18° C verwendet.
-Bei den Kühlschränken soll die Information "Temperatur: 4° C" angezeigt werden und bei den Gefrierschränken die Information "Temperatur: -18° C".
-
-. xref:warenwirtschaft:properties.adoc#66[Erstens]: Erstellst du die verschiedenen Auswahlmöglichkeiten, wie 4° C und -18° C.
-. xref:warenwirtschaft:properties.adoc#70[Zweitens]: Während du die Eigenschaft mit deinen Lagerorten verknüpfst, gibst du an, welche Lagerorte den Wert "4° C" haben sollen und welche den Wert "-18° C".
-
-!====
-
-| *Position* +
-([red]#Pflichtfeld#)
-|Gib eine Positionsnummer für die Eigenschaft ein.
-Standardmäßig wird aufsteigend nach Positionsnummer sortiert.
-
-*_Tipp_*: Speichere die Positionsnummern in 10er-Schritten, damit du mögliche neue Eigenschaften dazwischen einfügen kannst.
-|===
+include::_includes:page$neue-eigenschaften-erstellen-details.adoc[tag=stock]
 
 ---
 
 [#64]
 ==== Namen
 
-[cols="1,4a"]
-|===
-|Einstellung |Erläuterung
-
-| *Name* +
-([red]#Pflichtfeld#)
-|Gib einen Namen für die Eigenschaft in der angegebenen Sprache ein.
-
-*_Hinweis_*: Der Name ist auf 255 Zeichen begrenzt.
-
-*_Hinweis_*: Klicke auf icon:plus[role="darkGrey"], um den Namen in weitere Sprachen zu übersetzen.
-
-| *Beschreibung*
-|Gib eine Beschreibung für die Eigenschaft in der angegebenen Sprache ein.
-
-*_Hinweis_*: Klicke auf icon:plus[role="darkGrey"], um die Beschreibung in weitere Sprachen zu übersetzen.
-
-| icon:plus[role="darkGrey"]
-|Soll der Eigenschaftsname in mehreren Sprachen verfügbar sein?
-
-. Klicke auf icon:plus[role="darkGrey"] und wähle eine Sprachversion aus der Dropdown-Liste.
-. Gib Übersetzungen für den Namen und die Beschreibung ein.
-|===
+include::_includes:page$neue-eigenschaften-erstellen-namen.adoc[tag=stock]
 
 ---
 
@@ -259,54 +178,14 @@ Diesen Bereich siehst du nur, wenn du mit einer Eigenschaft vom Typ *Auswahl* ar
 Dieser Bereich ist für Eigenschaften vom Typ *Kein* unsichtbar.
 ====
 
-Hier definierst du die einzelnen Werte, die zur Auswahl stehen.
-
-. Klicke auf *Auswahlwert anlegen* (icon:plus[role="darkGrey"]). +
-→ Das Fenster *Auswahlwert anlegen* wird geöffnet.
-. Gib einen Namen für den Wert in der angegebenen Sprache ein. +
-*_Hinweis_*: Der Name ist auf 255 Zeichen begrenzt.
-Es gibt keine visuelle Anzeige, wenn diese Grenze überschritten wird.
-Beim Speichern des Auswahlwertes wird der Name nach 255 Zeichen abgeschnitten.
-. Wähle bei Bedarf eine Positionsnummer.
-. Klicke auf *Speichern*. +
-→ Der Wert wird erstellt und in der Übersicht angezeigt.
-Der Wert erhält automatisch eine fortlaufende und einzigartige ID, die nicht geändert werden kann.
-. Soll der Auswahlwert-Name in mehreren Sprachen verfügbar sein?
-Dann klicke auf den Wert, um eine Detailansicht zu öffnen.
-Dort kannst du Übersetzungen und Beschreibungen für den Wert eingeben.
+include::_includes:page$neue-eigenschaften-erstellen-auswahlwerte.adoc[]
 
 ---
 
 [#68]
 ==== Gruppen
 
-[cols="1,4a"]
-|===
-|Einstellung |Erläuterung
-
-| *Gruppen* +
-([red]#Pflichtfeld#)
-|Jede Eigenschaft muss zu mindestens einer Gruppe gehören.
-Wähle die passende Gruppe aus der Dropdown-Liste aus.
-Die gewählten Gruppen werden hier als sogenannte "Chips" dargestellt.
-Klicke auf icon:close[set=darkGrey], um eine Gruppe wieder zu entfernen.
-
-*_Hinweis_*: Diese Dropdown-Liste enthält nur xref:artikel:eigenschaften.adoc#1200[Eigenschaftsgruppen, die bereits angelegt wurden].
-|===
-
-[TIP]
-.Mehrere Eigenschaften einer Gruppe zuordnen
-====
-plentymarkets enthält eine Funktion, mit der du mehrere Eigenschaften gleichzeitig einer Gruppe zuordnen kannst.
-
-. Öffne das Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration*.
-. Wähle die Eigenschaften (icon:check-square[role="blue"]), die du der Gruppe zuordnen möchtest.
-. Klicke auf *Gruppen verknüpfen* (icon:link[set=material]). +
-→ Das Fenster *Gruppen verknüpfen* wird geöffnet.
-. Wähle eine oder mehrere Eigenschaftsgruppen (icon:check-square[role="blue"]).
-. Klicke auf *Link*. +
-→ Die gewählten Eigenschaften werden den Gruppen zugeordnet.
-====
+include::_includes:page$neue-eigenschaften-erstellen-gruppen.adoc[]
 
 [#70]
 === Eigenschaften mit Lagerorten verknüpfen
