--- a/docs/de-de/modules/changelog/pages/2022-06-08.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-06-08.adoc
@@ -109,9 +109,165 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/addressdoctor_6106[AddressDoctor^]
+|1.2.31
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportawincom_4762[Awin.com^]
+|1.0.13
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportbasicpricesearchengine_4777[Basic Price Search Engine^]
+|1.1.6
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportbeezup_4768[BeezUp^]
+|1.1.11
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportbelboonde_4759[belboon.com^]
+|1.1.12
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportbilligerde_4901[billiger.de^]
+|1.1.13
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourcontainerpopup5_7007[C4 Popup^]
+|2.0.7
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourctawidget5_6914[Call to Action Widget^]
+|2.0.6
+|-
+
+|link:https://marketplace.plentymarkets.com/clc_7017[CLC^]
+|1.0.5
+|-
+
+|link:https://marketplace.plentymarkets.com/dotsliderwidget_54878[Dot Slider - Präsentieren Sie mehrere Angebote auf Ihren Bannern^]
+|1.0.8
+|-
+
+|link:https://marketplace.plentymarkets.com/ebayanalytics_5144[eBay Analytics^]
+|1.0.6
+|-
+
+|link:https://marketplace.plentymarkets.com/ebayfeedback_5537[eBay Feedback^]
+|1.0.9
+|-
+
+|link:https://marketplace.plentymarkets.com/ebaymarketing_5158[eBay Marketing^]
+|1.0.10
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourcereselectronic5_6861[Electronic Theme^]
+|5.1.5
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourstructureddata_5114[Erweiterte Strukturierte Daten^]
+|1.1.5
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourfacebookpixelv5_6937[Facebook Pixel mit Tracking Events^]
+|2.1.7
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourceresfashionadvanced_5403[Fashion PRO Theme^]
+|5.1.2
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourceresfashion5_6864[Fashion Theme^]
+|5.1.4
+|-
+
+|link:https://marketplace.plentymarkets.com/feed4ceres_6097[Feed4Ceres^]
+|4.0.12
+|-
+
+|link:https://marketplace.plentymarkets.com/formatdesigner_6483[FormatDesigner^]
+|1.3.4
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourgoogletagmanager5_6984[Google Tag Manager^]
+|2.1.3
+|-
+
+|link:https://marketplace.plentymarkets.com/tracking_6452[Google Tag Manager Tracking ENTERPRISE^]
+|5.1.1
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourgridwidget_6860[Grid Widget^]
+|1.0.5
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourmanufacturersliderwidget_6905[Hersteller Slider Widget^]
+|1.0.4
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourhtmlwidget_6845[HTML Widget^]
+|1.0.3
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourcontainerinfoelement5_54773[Info-Element^]
+|1.0.2
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourcategorytabswidget5_6923[Kategorie Reiter Widget^]
+|2.0.3
+|-
+
+|link:https://marketplace.plentymarkets.com/multicontentwidget_6082[Multicontent Toolbox^]
+|4.7.13
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourowlsliderwidget5_6908[Owl Carousel Pro^]
+|2.0.5
+|-
+
+|link:https://marketplace.plentymarkets.com/paypal_4690[PayPal Checkout^]
+|6.0.8
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourseochecktool5_6973[SEO Check Frontend Tool^]
+|2.0.4
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourshopadvantageswidget_5948[Shop Vorteile Widget^]
+|1.0.10
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourstorespecialswidget_6363[Shopaktionen Widget^]
+|1.0.11
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportshoppingcom_4755[Shopping.com^]
+|1.0.16
+|-
+
+|link:https://marketplace.plentymarkets.com/smartsupplivechat_55224[Smartsupp Live-Chat^]
+|1.0.3
+|-
+
+|link:https://marketplace.plentymarkets.com/staticpagesmapper_6371[Statische Seiten im Shopbuilder^]
+|1.0.8
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexporttreepodiacom_4776[treepodia.com^]
+|1.0.15
+|-
+
+|link:https://marketplace.plentymarkets.com/deliverytimewidget_7062[Versand-Countdown - Jetzt bestellen, wann versendet?^]
+|2.0.2
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourwhatsappshare_5323[WhatsApp Share Button^]
+|1.1.7
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourbasicwidgets_5926[Whitelabel Widgets^]
+|1.0.8
+|-
 
 |===
 
