--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -687,6 +687,7 @@
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
 * xref:changelog:june-2022.adoc[Changelogs Juni 2022]
+** xref:changelog:2022-06-01.adoc[Changelog 08. Juni 2022]
 ** xref:changelog:2022-06-01.adoc[Changelog 01. Juni 2022]
 * xref:changelog:may-2022.adoc[Changelogs Mai 2022]
 ** xref:changelog:2022-05-25.adoc[Changelog 25. Mai 2022]
