--- a/docs/en-gb/modules/markets/partials/mirakl-data-catalogue-intro.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-data-catalogue-intro.adoc
@@ -1,6 +1,6 @@
 Item data is exported to {market} via catalogues. For {market}, you create catalogues with the *{assistant-name} Catalog* assistant.
 
-include::catalogues:page$catalogue-new-to-text.adoc[]
+include::partial$catalogue-new-to-text.adoc[]
 
 Create a separate marketplace format with the *{assistant-name} Catalog* assistant for each {market} product category in which you want to sell your items. Afterwards, link the {market} data fields with the item data saved in plentymarkets in the marketplace format that you created. +
 
