--- a/docs/en-gb/modules/markets/pages/fruugo.adoc
+++ b/docs/en-gb/modules/markets/pages/fruugo.adoc
@@ -6,9 +6,8 @@
 
 link:https://sell.fruugo.com/[Fruugo^] is a global market which allows customers to shop in their own country’s language and currency. Item descriptions are automatically translated into the target language and prices are converted into the local currency. This strengthens your international presence without major expenditure in terms of time or money.
 
-TIP: Find out how to set up the Fruugo plugin in the link:https://marketplace.plentymarkets.com/en/fruugo_6875[plugin’s user guide].
+IMPORTANT: This page only describes how you set up the Fruugo order interface. To export item and stock data, you also need the plugin link:https://marketplace.plentymarkets.com/en/fruugo_6875[Fruugo].
 
-////
 [#100]
 == Registering with Fruugo
 
@@ -298,4 +297,3 @@ Viewing the API log:
 . Select a *date* if you only want to see entries for a specific day.
 . Click on *Search* (icon:search[role="blue"]) to carry out the search. +
 → The processes are displayed.
-////
