--- a/docs/de-de/modules/maerkte/pages/fruugo.adoc
+++ b/docs/de-de/modules/maerkte/pages/fruugo.adoc
@@ -6,9 +6,7 @@
 
 link:https://sell.fruugo.com/[Fruugo^] ist ein globaler Marktplatz, auf dem Kund:innen in ihrer Landessprache und -währung einkaufen können. Artikelbeschreibungen werden automatisch in die Landessprachen übersetzt und in die Landeswährung umgerechnet, damit du deine internationale Präsenz ohne großen zeitlichen und finanziellen Aufwand ausbauen kannst.
 
-TIP: Wie du das Fruugo-Plugin in plentymarkets einrichtest, ist im link:https://marketplace.plentymarkets.com/fruugo_6875[User Guide des Plugins beschrieben].
-
-////
+IMPORTANT: Hier wird nur beschrieben, wie du die Fruugo-Auftragsschnittstelle einrichtest. Um Artikeldaten und Bestand zu Fruugo zu exportieren benötigst du außerdem das Plugin link:https://marketplace.plentymarkets.com/fruugo_6875[Fruugo].
 
 [#100]
 == Bei Fruugo registrieren
@@ -282,4 +280,3 @@ API-Log abrufen:
 . *_Optional:_* Wähle ein *Datum*, um nur Einträge eines bestimmten Tages zu erhalten.
 . Klicke auf *Suchen* (icon:search[role="blue"]), um die Suche auszuführen. +
 → Die Vorgänge werden angezeigt.
-////
