Some minor corrections

--- a/docs/de-de/modules/maerkte/pages/etsy.adoc
+++ b/docs/de-de/modules/maerkte/pages/etsy.adoc
@@ -243,7 +243,8 @@ include::partial$catalogue-new-to-text.adoc[]
 
 TIP: Du kannst für Etsy nur einen Katalog erstellen. Mehrere Kataloge werden für Etsy aktuell nicht unterstützt.
 
-:catalogue-template-name: Listing - Etsy
+:catalogue-template-name: Listing
+:etsy:
 
 include::partial$catalogue-creation.adoc[]
 
