--- a/docs/de-de/modules/maerkte/partials/catalogue-creation.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-creation.adoc
@@ -16,7 +16,11 @@ ifndef::format-item-new[. Wähle in der Dropdown-Liste *Format-Typ* die Option *
 ifdef::one-per-category[]
 . Wähle in der Dropdown-Liste *Format* die Kategorie des Marktplatzes, für die du den Katalog erstellen möchtest.
 endif::[]
-ifndef::one-per-category[]
+ifdef::etsy[]
+. Wähle in der Dropdown-Liste *Format* die Option *Etsy*. +
+*_Tipp:_* Für diesen Marktplatz kannst du nur einen Katalog erstellen. Deshalb ist als Format nur der Name des Marktplatzes wählbar.
+endif::[]
+ifndef::one-per-category,etsy[]
 . Wähle in der Dropdown-Liste *Format* die Option *{catalogue-template-name}*. +
 *_Tipp:_* Für diesen Marktplatz kannst du nur einen Katalog erstellen. Deshalb ist als Format nur der Name des Marktplatzes wählbar.
 endif::[]
