FIX broken include and missing entry in navigation

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -72,6 +72,7 @@
 *** xref:stock-management:working-with-redistributions.adoc[Movement: Transfer goods]
 *** xref:stock-management:outgoing-items.adoc[Movement: Outgoing goods]
 *** xref:stock-management:managing-stocks.adoc[Tracking stock levels]
+*** xref:stock-management:practical-guide-stocktaking.adoc[Practical guide to inventory]
 *** xref:stock-management:taking-stock.adoc[Inventory]
 *** xref:stock-management:practical-example-correcting-stock.adoc[Practical example: Correcting/Transferring/Deleting stock]
 ** xref:stock-management:managing-reorders.adoc[Reorders]
