--- a/docs/en-gb/modules/stock-management/pages/practical-guide-stocktaking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/practical-guide-stocktaking.adoc
@@ -1,17 +1,9 @@
-= Practical guide to stocktaking
+= Practical guide to inventory
 :keywords: stocktaking, plentyWarehouse app, plenty warehouse app, plenty-warehouse app, inventory log export, exporting stock movements, exporting stocks, stocktaking, carrying out stocktaking, taking stock, stocktaking tips
 :id: 1SHGYNJ
 :author: team-stock, team-mobile
 
-Do you want to carry out stocktaking to get an overview of your stock at a certain point in time? Then this page is for you. Learn which steps are necessary to take stock and how to adjust the process to your needs.
-
-////
-[IMPORTANT]
-.Orientierung: Verschiedene Vorgehensweisen zur Inventur in plentymarkets
-====
-////  ////
-====
-////
+Do you want to take inventory and get an overview of your stock at a certain point in time? Then this page is for you. Learn which steps are necessary to take stock and how to adjust the process to your needs.
 
 [#100]
 == Preparations
@@ -27,7 +19,7 @@ Download the plentyWarehouse app free of charge link:https://play.google.com/sto
 
 Are you working with the plentyWarehouse app for the first time? Then take a look at the information provided on our xref:stock-management:plentywarehouse.adoc#[overview page].
 
-include::.../stock-management/plentywarehouse/note-open-beta.adoc[]
+include::stock-management:partial$note-open-beta.adoc[]
 
 [#200]
 === Settings for stocktaking with the plentyWarehouse app
