--- a/docs/en-gb/modules/markets/partials/catalogue-creation.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-creation.adoc
@@ -2,7 +2,7 @@
 Creating a catalogue:
 
 . Go to *Data » Catalogues*.
-. Click on *Create catalogue*.
+. Click on *Create catalogue* (icon:add[set=material]).
 . Enter a name for the catalogue.
 . In the drop-down list *Export type*, select the option *{catalogue-template-name}*. +
 ifdef::catalogue-plugin[]
@@ -16,21 +16,26 @@ ifndef::format-item-new[. In the drop-down list *Format type*, select the option
 ifdef::one-per-category[]
 . In the drop-down list *Format*, select a category of the marketplace.
 endif::[]
-ifndef::one-per-category[]
+ifdef::etsy[]
+. From the drop-down list *Format*, select the option *Etsy*. +
+*_Tip:_* You can only create one catalogue for this market. Thus, the only format you can select is the name of the market.
+endif::[]
+ifndef::one-per-category,etsy[]
 . In the drop-down list *Format*, select the option *{catalogue-template-name}*. +
 *_Tip:_* You can only create one catalogue for this market. Thus, the only format you can select is the name of the market.
 endif::[]
-ifdef::Check24[*_Tip:_* You can create one catalogue for the category Check24 and one category for the category Check24 Fashion.]
+ifdef::Check24[*_Tip:_* You can create one catalogue for the category Check24 and one catalogue for the category Check24 Offer.]
 . Save (icon:save[set=plenty]) the settings. +
 → The catalogue is created. +
 → The catalogue is opened for editing.
 
 ifndef::url-export,price-search-engine[]
-[TIP]
-.Other catalogue settings are optional
-====
-In addition to the basic settings, the catalogue settings also contain options for *Format settings*, *Export settings* and *Download settings*. These optional settings allow you to create a file with the item data that is exported to the market at regular intervals. If you do not want to create such a file, you can ignore the settings. These settings do not impact the export to the market.
-====
+[discrete]
+===== Other catalogue settings
+
+Other catalogue settings are optional. Once you carried out the settings described on this page, your catalogue is automatically exported to {market}. That means you can ignore the catalogue settings for *Format settings*, *Export settings* and *Download settings*.
+
+The *Format settings*, *Export settings*, and *Download settings* allow you xref:data:export-marketplace-formats.adoc#file-export[to create a file with the variation data contained in the catalogue]. However, this file does not contain information about whether the data export to {market} was successful.
 endif::url-export,price-search-engine[]
 
 ////
