--- a/docs/en-gb/modules/markets/pages/otto-market.adoc
+++ b/docs/en-gb/modules/markets/pages/otto-market.adoc
@@ -294,7 +294,7 @@ During the export, the values are converted to the delivery statements that cust
 [.collapseBox]
 .Delivery times: list and examples
 --
-[cols="1,3a"]
+[cols="1a,3a"]
 !===
 ! *Delivery time*
 ! *OTTO delivery statement (in German)*
