ADD translation document types

--- a/docs/en-gb/modules/automation/pages/sub-procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/sub-procedures.adoc
@@ -199,6 +199,7 @@ This sub-procedure can be selected for the following procedures:
 * xref:automation:procedures.adoc#210[Documents]
 * xref:automation:procedures.adoc#240[Entry certificate (Gelangensbestätigung)]
 * xref:automation:procedures.adoc#250[Credit note]
+* xref:automation:procedures.adoc#255[External credit note]
 * xref:automation:procedures.adoc#270[Adjustment form]
 * xref:automation:procedures.adoc#280[Warehouse pick list]
 * xref:automation:procedures.adoc#290[Delivery note]
@@ -206,9 +207,13 @@ This sub-procedure can be selected for the following procedures:
 * xref:automation:procedures.adoc#310[Packing list]
 * xref:automation:procedures.adoc#320[Pick list]
 * xref:automation:procedures.adoc#350[Invoice]
+* xref:automation:procedures.adoc#355[External invoice]
 * xref:automation:procedures.adoc#360[Repair slip]
 * xref:automation:procedures.adoc#380[Return label]
 * xref:automation:procedures.adoc#390[Return slip]
+* xref:automation:procedures.adoc#422[Reversal credit note]
+* xref:automation:procedures.adoc#424[Reversal dunning letter]
+* xref:automation:procedures.adoc#426[Reversal invoice]
 * xref:automation:procedures.adoc#430[Shipping centre]
 
 [.subhead]
