FIX incorrect link noticed during translation

--- a/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-details.adoc
+++ b/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-details.adoc
@@ -19,7 +19,7 @@ Je nachdem, welchen Bereich du hier wählst, ändern sich die weiteren Einstellu
 
 *_Hinweis_*: Diese Handbuchseite erklärt Eigenschaften vom Bereich *Artikel*.
 Solche Eigenschaften werden zur Charakterisierung von Produkten verwendet.
-Eigenschaften können aber auch für die nähere Charakterisierung von xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakten] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorten] verwendet werden.
+Eigenschaften können aber auch für die nähere Charakterisierung von xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakten] oder xref:warenwirtschaft:properties.adoc#[Lagerorten] verwendet werden.
 Klicke auf die Links, um mehr über diese anderen Anwendungsfälle zu erfahren.
 
 | *Typ* +
@@ -145,7 +145,7 @@ Je nachdem, welchen Bereich du hier wählst, ändern sich die weiteren Einstellu
 
 *_Hinweis_*: Diese Handbuchseite erklärt Eigenschaften vom Bereich *Kontakt*.
 Solche Eigenschaften werden z.B. zur Ausgabe von Kontakteigenschaften auf deinen Dokumenten verwendet.
-Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorten] verwendet werden.
+Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:warenwirtschaft:properties.adoc#[Lagerorten] verwendet werden.
 Klicke auf die Links, um mehr über diese anderen Anwendungsfälle zu erfahren.
 
 | *Typ* +
