--- a/docs/de-de/modules/artikel/pages/eigenschaften.adoc
+++ b/docs/de-de/modules/artikel/pages/eigenschaften.adoc
@@ -513,7 +513,7 @@ Mit Hilfe von Attributen kannst du deine Produkte charakterisieren und gleichzei
 --
 
 Ja.
-Eigenschaften können auch für die nähere Charakterisierung von xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakte] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorte] verwendet werden.
+Eigenschaften können auch für die nähere Charakterisierung von xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakte] oder xref:warenwirtschaft:properties.adoc#[Lagerorte] verwendet werden.
 Klicke auf die Links, um mehr über diese andere Anwendungsfälle zu erfahren.
 
 --
