Fix unterminated comment block in nachrichten.adoc

--- a/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
@@ -479,4 +479,5 @@ include::partial$kennzahlen-voraussetzungen-edition.adoc[]
 [#600]
 == Praxisbeispiel
 
-//hier eine vorgefertige Kombination an Dimension, Berechnung und Filters anbieten. Dieses Beispiel soll eine sinnvolle Kombinationen sein, die für den meisten Händler passt. Frag mal den zuständigen Entwickler oder Daniel Bleichroth nach ein sinnvolles Praxisbeispiel pro Kennzahl.
+hier eine vorgefertige Kombination an Dimension, Berechnung und Filters anbieten. Dieses Beispiel soll eine sinnvolle Kombinationen sein, die für den meisten Händler passt. Frag mal den zuständigen Entwickler oder Daniel Bleichroth nach ein sinnvolles Praxisbeispiel pro Kennzahl.
+////
