mirakl - Stock limitation - DE+EN

--- a/docs/en-gb/modules/markets/pages/mediamarkt.adoc
+++ b/docs/en-gb/modules/markets/pages/mediamarkt.adoc
@@ -247,11 +247,11 @@ include::partial$variation-availability.adoc[]
 [#automating-order-processing]
 == Automating order processing
 
-Orders from MediaMarkt are automatically imported in your plentymarkets system every 15 minutes. 
+Orders from MediaMarkt are automatically imported in your plentymarkets system every 15 minutes.
 
 This is how orders are processed at MediaMarkt:
 
-* The seller accepts the order via an event procedure. 
+* The seller accepts the order via an event procedure.
 * The payment is collected by MediaMarkt.
 * With the payment confirmation, the invoice and delivery address on the order are updated in your plentymarkets system.
 * Via an event procedure, the shipping service provider as well as the package number are updated on the order in Mirakl.
@@ -289,7 +289,7 @@ include::partial$mirakl-EP-order-rejection.adoc[]
 include::partial$mirakl-EP-shipping-confirmation.adoc[]
 
 [#order-cancellation-mediamarkt]
-=== Report order cancellatiom to MediaMarkt
+=== Report order cancellation to MediaMarkt
 
 include::partial$mirakl-EP-cancellation.adoc[]
 
@@ -302,3 +302,6 @@ include::partial$mirakl-EP-refund.adoc[]
 === Send invoice to MediaMarkt
 
 include::partial$mirakl-EP-send-invoice.adoc[]
+
+//FAQ
+include::partial$mirakl-markets-faq.adoc[]
