--- a/docs/en-gb/modules/markets/pages/voelkner.adoc
+++ b/docs/en-gb/modules/markets/pages/voelkner.adoc
@@ -197,9 +197,9 @@ Orders from Voelkner are automatically imported into your plentymarkets system e
 
 This is how orders are processed at Voelkner:
 
-* Voelkner accepts the order and collects the payment. 
+* Voelkner accepts the order and collects the payment.
 * With the payment confirmation, the invoice and delivery address on the order are updated in your plentymarkets system.
-* Via an event procedure, the shipping service provider as well as the package number are updated on the order in Mirakl. 
+* Via an event procedure, the shipping service provider as well as the package number are updated on the order in Mirakl.
 * In the next step, the shipping notification is reported to Voelkner via another event procedure.
 * The invoice created by Voelkner is imported to the order in your plentymarkets system.
 * Via an event procedure, an invoice is sent to Voelkner.
@@ -228,3 +228,6 @@ include::partial$mirakl-EP-refund.adoc[]
 === Sending invoices to Voelkner
 
 include::partial$mirakl-EP-send-invoice.adoc[]
+
+//FAQ
+include::partial$mirakl-markets-faq.adoc[]
