--- a/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
@@ -94,7 +94,7 @@ endif::voelkner[]
 2+^| Step *Shipping profile mapping*
 
 | Shipping profile mapping
-| For each shipping profile in plentymarkets, enter the corresponding ID of the shipping service provider. You can find the ID in the Mirakl menu *{mirakl-menu-shipping}*.
+| For each shipping profile in plentymarkets, enter the corresponding abbreviation of the shipping service provider. You can find the ID in the Mirakl menu *{mirakl-menu-shipping}*.
 
 2+^| Step *Offer properties mapping*
 
@@ -122,8 +122,29 @@ endif::voelkner[]
 
 2+^| Step *Offer export settings*
 
-| Offer export settings
-| Here you can define the amount of stock that is exported for variations that are not limited to net stock or for variations where no stock is managed. Offers of those variations are exported once at night.
+| *Replace stock amount for items not limited to stock*
+| Do you want to export the same stock quantity for all variations without stock limitation?
 
+. Activate the option.
+. In the field *Quantity for items not limited to stock*, enter a number. +
+→ This number is exported as the stock for all variations without stock limitation.
+
+*_What are variations without stock limitation?_*
+
+Variations without stock limitation are variations with the setting *Limitation* set to one of the following options:
+
+* *None*
+* *Do not administer stock for this variation*
+
+You can find this setting in the menu xref:item:managing-items.adoc#200, Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Drop-down list: Limitation]. This setting is valid for all sales channels, not just for {market}.
+
+| *Quantity for items that are not limited to the stock*
+| What stock quantity do you want to export for variations without stock limitation?
+
+. Enter a number. +
+→ This number is exported as the stock for all variations without stock limitation.
+
+*_Important:_* You can only specify a quantity when the option *Replace stock amount for items not limited to stock* is active. +
+If you enter "0", variations without stock limitations are not exported.
 |======
 --
