--- a/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
@@ -122,8 +122,29 @@ endif::voelkner[]
 
 2+^| Schritt *Optionen für Angebots-Export*
 
-| Optionen für Angebots-Export
-| Hier kannst du eine Bestandsmenge für Varianten ohne Netto-Warenbestandsbeschränkung oder für Varianten, bei denen kein Warenbestand geführt wird, speichern und für den Export festlegen. Angebote dieser Varianten werden einmal pro Nacht übertragen.
+| *Bestandsmenge für Varianten ohne Bestandsbindung ersetzen*
+| Soll für alle Varianten ohne Bestandsbindung dieselbe Bestandsmenge exportiert werden?
 
+. Aktiviere die Option.
+. Gib in das Feld *Menge für Artikel (Varianten) ohne Bestandsbindung* eine Zahl ein. +
+→ Diese Zahl wird als Bestandsmenge für alle Varianten ohne Bestandsbindung exportiert.
+
+*_Was sind Varianten ohne Bestandsbindung?_*
+
+Varianten ohne Bestandsbindung sind Varianten, bei denen für die Einstellung *Beschränkung* eine der folgenden Optionen eingestellt ist:
+
+* *Keine*
+* *Keinen WB für diese Variante führen*
+
+Diese Einstellung findest du im Menü xref:artikel:artikel-verwalten.adoc#200[Artikel » Artikel bearbeiten » [Variante öffnen\] » Tab: Einstellungen » Bereich: Verfügbarkeit » Dropdown-Liste: Beschränkung]. Die Einstellung gilt für alle Verkaufskanäle, also nicht nur für {market}.
+
+| *Menge für Artikel (Varianten) ohne Bestandsbindung*
+| Welche Bestandsmenge soll für Varianten ohne Bestandsbindung exportiert werden?
+
+. Gib eine Zahl ein. +
+→ Diese Zahl wird als Bestandsmenge für alle Varianten ohne Bestandsbindung exportiert.
+
+*_Wichtig:_* Du kannst nur eine Menge festlegen, wenn die Option *Bestandsmenge für Varianten ohne Bestandsbindung ersetzen* aktiviert ist. +
+Wenn du "0" eingibst, werden Varianten ohne Bestandsbindung nicht exportiert.
 |======
 --
