--- a/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
+++ b/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
@@ -247,7 +247,7 @@ include::partial$variantenverfuegbarkeit.adoc[]
 [#auftragsabwicklung-automatisieren]
 == Auftragsabwicklung automatisieren
 
-Aufträge, die auf MediaMarkt erzeugt wurden, werden alle 15 MInuten in dein plentymarkets System importiert.
+Aufträge, die auf MediaMarkt erzeugt wurden, werden alle 15 Monuten in dein plentymarkets System importiert.
 
 So läuft die Auftragsabwicklung bei MediaMarkt ab:
 
