--- a/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
+++ b/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
@@ -247,11 +247,11 @@ include::partial$variantenverfuegbarkeit.adoc[]
 [#auftragsabwicklung-automatisieren]
 == Auftragsabwicklung automatisieren
 
-Aufträge, die auf MediaMarkt erzeugt wurden, werden alle 15 Monuten in dein plentymarkets System importiert.
+Aufträge, die auf MediaMarkt erzeugt wurden, werden alle 15 Minuten in dein plentymarkets System importiert.
 
 So läuft die Auftragsabwicklung bei MediaMarkt ab:
 
-* Der Händler akzeptiert den Auftrag über eine Ereignisaktion.
+* Die Händler:in akzeptiert den Auftrag über eine Ereignisaktion.
 * Die Zahlung wird von MediaMarkt eingezogen.
 * Mit der Zahlungszusicherung werden die Rechnungs- und Lieferadresse am Auftrag in deinem plentymarkets System aktualisiert.
 * Über eine Ereignisaktion werden Versanddienstleister und Paketnummer am Auftrag in Mirakl aktualisiert.
