--- a/docs/en-gb/modules/markets/partials/mirakl-marketplace-template.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-marketplace-template.adoc
@@ -256,7 +256,7 @@ endif::[]
 2+^| Step *Shipping profile mapping*
 
 | Shipping profile mapping
-| For each shipping profile in plentymarkets, enter the corresponding abbreviation of the shipping service provider. To find the abbreviations, go to *Information » Shipping* in Mirakl.
+| For each shipping profile in plentymarkets, enter the corresponding ID of the shipping service provider. To find the abbreviations, go to *Information » Shipping* in Mirakl.
 
 2+^| Step *Offer properties mapping*
 
