--- a/docs/en-gb/modules/markets/partials/awin-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/awin-recommended-mappings.adoc
@@ -49,13 +49,17 @@ _or_
   ** *Listing:* Do not select any option
   ** *Client:* Select the client you use for {market}.
 
-| Price per unit
+| Unit price
 | no (nein)
-| * *Unit price » Unit name » [Select same sales price as for the data field “Price”]*, language *German*
+| * *Unit price » Price » [Select same sales price as for the data field “Price”]*
 
-| Relative base price
+| Unit price: quantity
 | no (nein)
-| * *Unit price » Price » [Select the same sales price as for the data field "Price"]*
+| * *Unit price » Quantity*
+
+| Unit price: unit
+| no
+| * *Unit price » Unit Name*
 
 | Brand
 | yes
