--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -140,6 +140,7 @@ Du kannst die Übersicht an deine Bedürfnisse anpassen.
 * Auftragstyp
 * Anzahl der Artikel
 * Auftragsstatus
+* Packzustand
 * Erstellt am
 
 --
@@ -344,6 +345,12 @@ Palette schließen:
 . Wenn du sicher bist, dass du die Palette schließen möchtest, klicke auf icon:lock[set=material] *Palette schließen*. +
 → Die Palette wird geschlossen.
 
+[NOTE]
+.Anmeldung von Paletten ohne Schließen möglich
+====
+Paletten müssen nicht geschlossen sein, um sie im Versand-Center 2.0 anzumelden.
+====
+
 [#delete-pallet]
 === Palette löschen
 
@@ -432,7 +439,7 @@ Artikel verpacken:
 [TIP]
 .Verpackte Artikel aus Paket entfernen
 ======
-Möchtest du Artikel aus einem Paket wieder entfernen, setze neben den Artikeln im Bereich *Verpackte Artikel* ein Häkchen (icon:check_box[set=material, role=skyBlue]) und klicke auf *Artikel aus dem Paket entfernen* (icon:delete[set=material]). Klicke anschließend auf icon:delete[set=material] *Löschen*, um die Artikel aus dem Paket zu entfernen.
+Möchtest du Artikel aus einem Paket wieder entfernen, setze neben den Artikeln im Bereich *Verpackte Artikel* ein Häkchen (icon:check_box[set=material, role=skyBlue]) und klicke auf *Artikel aus dem Paket entfernen* (icon:delete[set=material]). Klicke anschließend auf icon:delete[set=material] *Entfernen*, um die Artikel aus dem Paket zu entfernen.
 ======
 
 [#edit-items]
@@ -510,7 +517,7 @@ Schnelles Packen verwenden:
 |Wähle den Pakettyp aus der Dropdown-Liste.
 
 |*Typ der Verpackungseinheit*
-|Wähle die Verpackungseinheit aus der Dropdown-Liste.
+|Wähle den Typ der Verpackungseinheit aus der Dropdown-Liste.
 
 |*Paketgewicht (kg)*
 |Gib das Paketgewicht ein.
@@ -524,7 +531,7 @@ Schnelles Packen verwenden:
 |*Anzahl der Pakete*
 |Gib die Anzahl der Pakete ein, die gepackt werden sollen.
 
-|*Gesamtgewicht der Pakete*
+|*Gesamtgewicht der Pakete (kg)*
 |Gib das Paketgewicht insgesamt ein.
 
 |*Paketvolumen (cm³)*
@@ -609,6 +616,12 @@ Paket schließen:
 . Wenn du sicher bist, dass du das Paket schließen möchtest, klicke auf icon:lock[set=material] *Paket schließen*. +
 → Das Paket wird geschlossen.
 
+[NOTE]
+.Anmeldung von Paletten ohne Schließen möglich
+====
+Paletten müssen nicht geschlossen sein, um sie im Versand-Center 2.0 anzumelden.
+====
+
 [#delete-package]
 === Paket löschen
 
@@ -647,3 +660,9 @@ Aufträge schließen:
 → Das Fenster *Auftrag schließen* wird geöffnet.
 . Wenn du dir sicher bist, dass du den Auftrag schließen möchtest, klicke auf icon:lock[set=material] *Auftrag schließen*. +
 → Der Auftrag wird geschlossen.
+
+[NOTE]
+.Anmeldung von Aufträgen ohne Schließen möglich
+====
+Aufträge müssen nicht geschlossen sein, um sie im Versand-Center 2.0 anzumelden.
+====
