--- a/docs/en-gb/modules/fulfilment/pages/package-content-list-2-0.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/package-content-list-2-0.adoc
@@ -140,6 +140,7 @@ You can customise the overview to meet your needs.
 * Order type
 * Number of items
 * Order status
+* Packing status
 * Created on
 
 --
@@ -316,7 +317,7 @@ Configuring a pallet:
 → The orders that correspond to the entered search criteria are shown.
 . Click in the line of the order to open the order.
 . On the left of the pallet that you want to configure, place a check mark (icon:check_box[set=material, role=skyBlue]).
-. Click on the further actions (icon:more_vert[set=material]) at the top.
+. Click on the further options (icon:more_vert[set=material]) at the top.
 . Select the option icon:settings[set=material] *Configure pallet*. +
 *_Or:_* In the navigation on the left, click on the further options (icon:more_vert[set=material]) and select the option icon:settings[set=material] *Configure pallet*. +
 → The window *Configure pallet* opens.
@@ -337,7 +338,7 @@ Closing a pallet:
 → The orders that correspond to the entered search criteria are shown.
 . Click in the line of the order to open the order.
 . On the left of the pallet that you want to close, place a check mark (icon:check_box[set=material, role=skyBlue]).
-. Click on the further actions (icon:more_vert[set=material]) at the top.
+. Click on the further options (icon:more_vert[set=material]) at the top.
 . Select the option icon:lock[set=material] *Close pallet*. +
 *_Or:_* In the navigation on the left, click on the further options (icon:more_vert[set=material]) and select the option icon:lock[set=material] *Close pallet*. +
 → The window *Close pallet* opens.
@@ -357,7 +358,7 @@ Deleting a pallet:
 → The orders that correspond to the entered search criteria are shown.
 . Click in the line of the order to open the order.
 . On the left of the pallet that you want to delete, place a check mark (icon:check_box[set=material, role=skyBlue]).
-. Click on the further actions (icon:more_vert[set=material]) at the top.
+. Click on the further options (icon:more_vert[set=material]) at the top.
 . Select the option icon:delete[set=material] *Delete pallet*. +
 *_Or:_* In the navigation on the left, click on the further options (icon:more_vert[set=material]) and select the option icon:delete[set=material] *Delete pallet*. +
 → The window *Delete pallet* opens.
@@ -469,7 +470,7 @@ Putting a package on a pallet:
 . Click in the line of the order to open the order.
 . On the left of the package that you want to put on a pallet, place a check mark (icon:check_box[set=material, role=skyBlue]). +
 *_Tip:_* You can also select several packages and collectively put them on a pallet.
-. Click on the further actions (icon:more_vert[set=material]) at the top.
+. Click on the further options (icon:more_vert[set=material]) at the top.
 . Select the option icon:table_rows[set=material] *Put package on pallet*. +
 → The window *Put package on pallet* opens.
 . Select the ID of the pallet from the drop-down list or select the option *Create a new pallet*. +
@@ -491,7 +492,7 @@ Using quick packing:
 . Click in the line of the order to open the order.
 . Place a check mark (icon:check_box[set=material, role=skyBlue]) next to the package or pallet you want to use the quick packing for. +
 *_Tip:_* You can also select several packages, several pallets or a combination of packages and pallets for the quick packing.
-. Click on the further actions (icon:more_vert[set=material]).
+. Click on the further options (icon:more_vert[set=material]).
 . Select the option icon:dynamic_feed[set=material] *Quick packing*. +
 → The window *Quick packing* opens.
 . Expand (icon:chevron_right[set=material]) the item settings on the left.
@@ -563,7 +564,7 @@ Configuring a package:
 → The orders that correspond to the entered search criteria are shown.
 . Click in the line of the order to open the order.
 . On the left of the package that you want to configure, place a check mark (icon:check_box[set=material, role=skyBlue]).
-. Click on the further actions (icon:more_vert[set=material]) at the top.
+. Click on the further options (icon:more_vert[set=material]) at the top.
 . Select the option icon:settings[set=material] *Configure package*. +
 *_Or:_* In the navigation on the left, click on the further options (icon:more_vert[set=material]) and select the option icon:settings[set=material] *Configure package*. +
 → The window *Configure package* opens.
@@ -602,7 +603,7 @@ Closing a package:
 → The orders that correspond to the entered search criteria are shown.
 . Click in the line of the order to open the order.
 . On the left of the package that you want to close, place a check mark (icon:check_box[set=material, role=skyBlue]).
-. Click on the further actions (icon:more_vert[set=material]) at the top.
+. Click on the further options (icon:more_vert[set=material]) at the top.
 . Select the option icon:lock[set=material] *Close package*. +
 *_Or:_* In the navigation on the left, click on the further options (icon:more_vert[set=material]) and select the option icon:lock[set=material] *Close package*. +
 → The window *Close package* opens.
@@ -622,7 +623,7 @@ Deleting a package:
 → The orders that correspond to the entered search criteria are shown.
 . Click in the line of the order to open the order.
 . On the left of the package that you want to delete, place a check mark (icon:check_box[set=material, role=skyBlue]).
-. Click on the further actions (icon:more_vert[set=material]) at the top.
+. Click on the further options (icon:more_vert[set=material]) at the top.
 . Select the option icon:delete[set=material] *Delete package*. +
 *_Or:_* In the navigation on the left, click on the further options (icon:more_vert[set=material]) and select the option icon:delete[set=material] *Delete package*. +
 → The window *Delete package* opens.
@@ -642,7 +643,7 @@ Closing orders:
 → The orders that correspond to the entered search criteria are shown.
 . Click in the line of the order to open the order. +
 → The order is displayed in the navigation on the left.
-. Click on the further actions (icon:more_vert[set=material]).
+. Click on the further options (icon:more_vert[set=material]).
 . Select the option icon:lock[set=material] *Close order*. +
 → The window *Close order* opens.
 . If you are sure that you want to close the order, click on icon:lock[set=material] *Close order*. +
